--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,22 @@ h1 {
   text-align: center;
 }
 
+hr {
+  border-top: 2px dashed #58616b;
+}
+
+select:not([multiple]) {
+  appearance: none;
+  background-image: url("data:image/svg+xml;utf8,<svg stroke='currentColor' fill='lightgray' stroke-width='0' viewBox='0 0 512 512' height='1em' width='1em' xmlns='http://www.w3.org/2000/svg'><path d='M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z'></path></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: 10px;
+}
+
+/* -------------------------------------- */
+/* ------------- bootstrap -------------- */
+/* -------------------------------------- */
+
 .selection-tabs a.active {
   color: white !important;
   background-color: #2c3136 !important;
@@ -21,12 +37,18 @@ h1 {
   border-color: black !important;
 }
 
+.form-control,.form-control:active,.form-control:focus {
+  background-color: #343a40;
+  border-color: black;
+  color: white;
+}
+
 /* -------------------------------------- */
 /* --------- react-grid-layout ---------- */
 /* -------------------------------------- */
 
 .react-grid-item > .react-resizable-handle::after {
-  content: "";
+  content: '';
   position: absolute;
   right: 3px;
   bottom: 3px;
