Add a legend to the line chart

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ svg > g > line {
   stroke-opacity: 1 !important;
 }
 
+g > circle + text {
+  fill: white !important;
+}
+
 /* -------------------------------------- */
 /* ------------- bootstrap -------------- */
 /* -------------------------------------- */
