* Finish the rewrite

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,11 @@ g > circle + text {
   color: white;
 }
 
+.table-responsive {
+  width: 98%;
+  height: 95%;
+}
+
 /* -------------------------------------- */
 /* --------- react-grid-layout ---------- */
 /* -------------------------------------- */
